update class name in car controller, add default value to input
Co-Authored-By: Micheal Hansen <micheal.hansen@gmail.com>
Co-Authored-By: Megan Hepner <megan.hepner@gmail.com>

--- a/CarDealership/Views/Cars/Index.cshtml
+++ b/CarDealership/Views/Cars/Index.cshtml
@@ -20,6 +20,6 @@
 
 <form action="/Cars" method="post">
   <label for="stringMaxPrice">Filter By Max Price:</label>
-  <input id="stringMaxPrice" name="stringMaxPrice" type="number">
+  <input id="stringMaxPrice" name="stringMaxPrice" type="number" value="0">
   <button type="submit">Filter</button>
 </form>
