--- a/CarDealership/Views/Home/Index.cshtml
+++ b/CarDealership/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 <h1>Car Dealership:</h1>
-<a href='/Cars'>View All Cars</a>
-<a href='/Cars/CheckPrice'>Set Your Price</a>
-<a href='/Cars/remove'>Remove a car</a>
+<a href='/Cars'>View All Cars</a><br>
+<a href='/Cars/remove'>Remove a car</a><br>
 <a href='/Cars/add'>Add a car</a>
